--- a/app.json
+++ b/app.json
@@ -7,6 +7,9 @@
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
+    "description": "Track your daily steps and reach your fitness goals with a simple, beautiful step counter.",
+    "privacy": "public",
+    "platforms": ["ios", "android"],
     "splash": {
       "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
@@ -14,6 +17,8 @@
     },
     "ios": {
       "supportsTablet": true,
+      "bundleIdentifier": "com.gustiffer.steptracker",
+      "buildNumber": "1",
       "infoPlist": {
         "NSMotionUsageDescription": "This app uses motion data to track your daily steps and physical activity.",
         "NSHealthShareUsageDescription": "This app accesses HealthKit to read your step count data.",
@@ -21,6 +26,8 @@
       }
     },
     "android": {
+      "package": "com.gustiffer.steptracker",
+      "versionCode": 1,
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
